feat. logic on html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
     <main>
 
         <div class="wrapper">
-            <button id="button-pali" class="btn btn--primary">Palindromo</button>
-            <button id="button-pd" class="btn btn--grn">Pari dispari</button>
+            <div class="box box--square p--text-center box__dimensions--small">
+                <button id="button-pali" class="btn btn--primary">Palindromo</button>
+                <div id="pali-result" class="p--set-margin"></div>
+            </div>
+            <div class="box box--square p--text-center box__dimensions--small">
+                <button id="button-pd" class="btn btn--grn">Pari dispari</button>
+                <div id="pd-result" class="p--set-margin"></div>
+            </div>
         </div>
 
     </main>
